fixed contact spacing

--- a/springhill_frontend/public/view/css/_1920px.scss
+++ b/springhill_frontend/public/view/css/_1920px.scss
@@ -174,7 +174,7 @@
       #allButtons {
         @media only screen and (min-width: $min) {
           margin-left: 50%;
-          right: 114px;
+          left: -683px;
           z-index: 3;
           width: 1366px;
         }
